Tweaks to Index

--- a/index.html
+++ b/index.html
@@ -1,8 +1,4 @@
-<!DOCTYPE HTML>
-<html>
-  <head>
-    <title>{{ page.title }}</title>
-  </head>
-  <body>
-  </body>
-</html>
+---
+layout: default
+title: My Blog
+---
