Messing With Layout

--- a/index.html
+++ b/index.html
@@ -2,3 +2,20 @@
 layout: default
 title: My Blog
 ---
+<div class="header">
+	<div class="logo">
+		<h2>CHASE <strong>PARK</strong></h2>
+	</div>
+	<div class="menubutton">
+	</div>
+	<div class="menu">
+		<ul>
+			<li id="default">
+				<a href="#homepage" class="active">Home</a>
+			</li>
+		</ul>
+	</div>
+	<br class="clear" />
+</div>
+<div class="wrapper homepage active" id="homepage" style="display:block;">
+</div>
