Finished Menu, removed Footer

--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@ title: My Blog
 			<li id="default">
 				<a href="#homepage" class="active">Home</a>
 			</li>
+			<li>
+				<a href="#portfolio">Portfolio</a>
+			</li>
+			<li>
+				<a href="#blog">Blog</a>
+			</li>
+			<li>
+				<a href="#resume">Resume</a>
+			</li>
+			<li>
+				<a href="#contact">Contact</a>
+			</li>
 		</ul>
 	</div>
 	<br class="clear" />
