Added Includes For Various Tabs

--- a/index.html
+++ b/index.html
@@ -29,5 +29,8 @@ title: My Site
 	</div>
 	<br class="clear" />
 </div>
-<div class="wrapper homepage active" id="homepage" style="display:block;">
-</div>
+{% include homepage %}
+{% include portfolio %}
+{% include blog %}
+{% include resume %}
+{% include contact %}
