Removed jQuery Validate, Moved Header To Include

--- a/index.html
+++ b/index.html
@@ -2,33 +2,7 @@
 layout: default
 title: My Site
 ---
-<div class="header">
-	<div class="logo">
-		<h2>CHASE <strong>PARK</strong></h2>
-	</div>
-	<div class="menubutton">
-	</div>
-	<div class="menu">
-		<ul>
-			<li id="default">
-				<a href="#homepage" class="active">Home</a>
-			</li>
-			<li>
-				<a href="#portfolio">Portfolio</a>
-			</li>
-			<li>
-				<a href="#blog">Blog</a>
-			</li>
-			<li>
-				<a href="#resume">Resume</a>
-			</li>
-			<li>
-				<a href="#contact">Contact</a>
-			</li>
-		</ul>
-	</div>
-	<br class="clear" />
-</div>
+{% include header %}
 {% include homepage %}
 {% include portfolio %}
 {% include blog %}
