--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: My Site
 ---
-{% include header %}
+{% include navigation %}
 {% include homepage %}
 {% include portfolio %}
 {% include blog %}
